@@ -1,6 +1,5 @@
 package com.czertainly.core.service.impl;
 
-import com.czertainly.api.clients.ComplianceApiClient;
 import com.czertainly.api.exception.AlreadyExistException;
 import com.czertainly.api.exception.ConnectorException;
 import com.czertainly.api.exception.NotFoundException;
@@ -16,7 +15,10 @@ import com.czertainly.api.model.core.audit.OperationType;
 import com.czertainly.api.model.core.certificate.CertificateType;
 import com.czertainly.api.model.core.compliance.ComplianceProfileDto;
 import com.czertainly.api.model.core.compliance.ComplianceProfilesListDto;
+import com.czertainly.api.model.core.connector.ConnectorDto;
+import com.czertainly.api.model.core.connector.ConnectorStatus;
 import com.czertainly.api.model.core.connector.FunctionGroupCode;
+import com.czertainly.api.model.core.connector.FunctionGroupDto;
 import com.czertainly.core.aop.AuditLogged;
 import com.czertainly.core.dao.entity.Certificate;
 import com.czertainly.core.dao.entity.ComplianceGroup;
@@ -29,16 +31,15 @@ import com.czertainly.core.dao.repository.ComplianceGroupRepository;
 import com.czertainly.core.dao.repository.ComplianceProfileRepository;
 import com.czertainly.core.dao.repository.ComplianceProfileRuleRepository;
 import com.czertainly.core.dao.repository.ComplianceRuleRepository;
+import com.czertainly.core.dao.repository.ConnectorRepository;
 import com.czertainly.core.service.CertificateService;
 import com.czertainly.core.service.ComplianceProfileService;
 import com.czertainly.core.service.ComplianceService;
-import com.czertainly.core.service.ConnectorService;
 import com.czertainly.core.service.RaProfileService;
 import com.czertainly.core.util.AttributeDefinitionUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.context.annotation.Lazy;
 import org.springframework.stereotype.Service;
 
 import javax.transaction.Transactional;
@@ -69,18 +70,13 @@ public class ComplianceProfileServiceImpl implements ComplianceProfileService {
     @Autowired
     private ComplianceGroupRepository complianceGroupRepository;
 
-    @Lazy
     @Autowired
-    private ConnectorService connectorService;
+    private ConnectorRepository connectorRepository;
 
     @Autowired
     private RaProfileService raProfileService;
 
     @Autowired
-    private ComplianceApiClient complianceApiClient;
-
-    @Autowired
-    @Lazy
     private ComplianceService complianceService;
 
     @Autowired
@@ -111,13 +107,13 @@ public class ComplianceProfileServiceImpl implements ComplianceProfileService {
     @AuditLogged(originator = ObjectType.FE, affected = ObjectType.COMPLIANCE_PROFILE, operation = OperationType.CREATE)
     public ComplianceProfileDto createComplianceProfile(ComplianceProfileRequestDto request) throws AlreadyExistException, NotFoundException, ValidationException {
         logger.info("Creating new Compliance Profile: {}", request);
-        if(checkComplianceProfileEntityByName(request.getName())){
+        if (checkComplianceProfileEntityByName(request.getName())) {
             logger.error("Compliance Profile with same name already exists");
             throw new AlreadyExistException(ComplianceProfile.class, request.getName());
         }
         ComplianceProfile complianceProfile = addComplianceEntity(request);
         logger.debug("Compliance Entity: {}", complianceProfile);
-        if(request.getRules() != null && !request.getRules().isEmpty()){
+        if (request.getRules() != null && !request.getRules().isEmpty()) {
             logger.info("Rules are not empty in the request. Adding them to the profile");
             addRulesForConnector(request.getRules(), complianceProfile);
         }
@@ -129,14 +125,14 @@ public class ComplianceProfileServiceImpl implements ComplianceProfileService {
     public ComplianceProfileDto addRule(String uuid, ComplianceRuleAdditionRequestDto request) throws AlreadyExistException, NotFoundException, ValidationException {
         logger.info("Adding new rule : {} to the profile: {}", request, uuid);
         ComplianceProfile complianceProfile = getComplianceProfileEntityByUuid(uuid);
-        logger.debug("Identified profile to add rule: ", complianceProfile);
-        Connector connector = connectorService.getConnectorEntity(request.getConnectorUuid());
-        if(isComplianceProfileRuleEntityExists(complianceProfile, request.getRuleUuid(), connector, request.getKind())){
+        logger.debug("Identified profile to add rule: {}", complianceProfile);
+        Connector connector = getConnectorEntity(request.getConnectorUuid());
+        if (isComplianceProfileRuleEntityExists(complianceProfile, request.getRuleUuid(), connector, request.getKind())) {
             logger.error("Rule: {} already exists in the Compliance Profile", request);
             throw new AlreadyExistException("Selected rule is already available in the Compliance Profile");
         }
         ComplianceRule complianceRule = getComplianceRuleEntity(request.getRuleUuid(), connector, request.getKind());
-        logger.debug("Rule Entity: ", complianceRule);
+        logger.debug("Rule Entity: {}", complianceRule);
         ComplianceProfileRule complianceProfileRule = generateComplianceProfileRule(complianceProfile, complianceRule, request.getAttributes());
         complianceProfileRuleRepository.save(complianceProfileRule);
         return complianceProfile.mapToDto();
@@ -147,7 +143,7 @@ public class ComplianceProfileServiceImpl implements ComplianceProfileService {
     public ComplianceProfileDto removeRule(String uuid, ComplianceRuleDeletionRequestDto request) throws NotFoundException {
         logger.info("Removing rule : {} from the profile: {}", request, uuid);
         ComplianceProfile complianceProfile = getComplianceProfileEntityByUuid(uuid);
-        Connector connector = connectorService.getConnectorEntity(request.getConnectorUuid());
+        Connector connector = getConnectorEntity(request.getConnectorUuid());
         ComplianceRule complianceRule = getComplianceRuleEntity(request.getRuleUuid(), connector, request.getKind());
         ComplianceProfileRule complianceProfileRule = complianceProfileRuleRepository.findByComplianceProfileAndComplianceRule(complianceProfile, complianceRule).orElseThrow(() -> new NotFoundException(ComplianceProfileRule.class, request.getRuleUuid()));
         complianceProfileRuleRepository.delete(complianceProfileRule);
@@ -160,16 +156,16 @@ public class ComplianceProfileServiceImpl implements ComplianceProfileService {
     public ComplianceProfileDto addGroup(String uuid, ComplianceGroupRequestDto request) throws AlreadyExistException, NotFoundException {
         logger.info("Adding new group : {} to the profile: {}", request, uuid);
         ComplianceProfile complianceProfile = getComplianceProfileEntityByUuid(uuid);
-        logger.debug("Identified profile to add group: ", complianceProfile);
-        Connector connector = connectorService.getConnectorEntity(request.getConnectorUuid());
-        Boolean isAvail = complianceProfile.getGroups().stream().filter(r -> r.getUuid().equals(request.getGroupUuid()) && r.getConnector().getUuid().equals(request.getConnectorUuid()) && r.getKind().equals(request.getKind())).findFirst().isPresent();
-        if(isAvail){
+        logger.debug("Identified profile to add group: {}", complianceProfile);
+        Connector connector = getConnectorEntity(request.getConnectorUuid());
+        boolean isAvail = complianceProfile.getGroups().stream().anyMatch(r -> r.getUuid().equals(request.getGroupUuid()) && r.getConnector().getUuid().equals(request.getConnectorUuid()) && r.getKind().equals(request.getKind()));
+        if (isAvail) {
             logger.error("Group: {} already exists in the Compliance Profile", request);
             throw new AlreadyExistException("Selected group is already available in the Compliance Profile");
         }
         ComplianceGroup complianceGroup = getComplianceGroupEntity(request.getGroupUuid(), connector, request.getKind());
         complianceProfile.getGroups().add(complianceGroup);
-        logger.debug("Group Entity: ", complianceGroup);
+        logger.debug("Group Entity: {}", complianceGroup);
         complianceProfileRepository.save(complianceProfile);
         return complianceProfile.mapToDto();
     }
@@ -179,7 +175,7 @@ public class ComplianceProfileServiceImpl implements ComplianceProfileService {
     public ComplianceProfileDto removeGroup(String uuid, ComplianceGroupRequestDto request) throws NotFoundException {
         logger.info("Removing group : {} from the profile: {}", request, uuid);
         ComplianceProfile complianceProfile = getComplianceProfileEntityByUuid(uuid);
-        Connector connector = connectorService.getConnectorEntity(request.getConnectorUuid());
+        Connector connector = getConnectorEntity(request.getConnectorUuid());
         ComplianceGroup complianceGroup = getComplianceGroupEntity(request.getGroupUuid(), connector, request.getKind());
         complianceProfile.getGroups().remove(complianceGroup);
         logger.debug("Group: {} removed", request);
@@ -201,13 +197,13 @@ public class ComplianceProfileServiceImpl implements ComplianceProfileService {
     public void removeComplianceProfile(String uuid) throws NotFoundException, ValidationException {
         logger.info("Request to delete the Compliance Profile with UUID: {}", uuid);
         ComplianceProfile complianceProfile = getComplianceProfileEntityByUuid(uuid);
-        logger.debug("Profile identified: ", complianceProfile);
+        logger.debug("Profile identified: {}", complianceProfile);
         List<ValidationError> errors = new ArrayList<>();
         if (!complianceProfile.getRaProfiles().isEmpty()) {
             logger.warn("Compliance Profile has dependent RA Profile: {}", complianceProfile.getRaProfiles());
             errors.add(ValidationError.create("Compliance Profile {} has {} dependent RA profiles", complianceProfile.getName(),
                     complianceProfile.getRaProfiles().size()));
-            complianceProfile.getRaProfiles().stream().forEach(c -> errors.add(ValidationError.create(c.getName())));
+            complianceProfile.getRaProfiles().forEach(c -> errors.add(ValidationError.create(c.getName())));
         }
 
         if (!errors.isEmpty()) {
@@ -230,18 +226,18 @@ public class ComplianceProfileServiceImpl implements ComplianceProfileService {
             ComplianceProfile complianceProfile;
             try {
                 complianceProfile = getComplianceProfileEntityByUuid(uuid);
-            } catch (NotFoundException e){
+            } catch (NotFoundException e) {
                 logger.warn("Unable to find the Compliance Profile with UUID: {}, Proceeding to next", uuid);
                 continue;
             }
 
             if (!complianceProfile.getRaProfiles().isEmpty()) {
                 errors.add("RA Profiles: " + complianceProfile.getRaProfiles().size() + ". Names: ");
-                complianceProfile.getRaProfiles().stream().forEach(c -> errors.add(c.getName()));
+                complianceProfile.getRaProfiles().forEach(c -> errors.add(c.getName()));
             }
 
             if (!errors.isEmpty()) {
-                logger.warn("Dependenct RA Profiles found for: {}", complianceProfile);
+                logger.warn("Dependent RA Profiles found for: {}", complianceProfile);
                 ForceDeleteMessageDto forceModal = new ForceDeleteMessageDto();
                 forceModal.setUuid(complianceProfile.getUuid());
                 forceModal.setName(complianceProfile.getName());
@@ -264,19 +260,19 @@ public class ComplianceProfileServiceImpl implements ComplianceProfileService {
     public void bulkForceRemoveComplianceProfiles(List<String> uuids) {
         logger.info("Requesting force remove Compliance Profile: {}", String.join(", ", uuids));
         for (String uuid : uuids) {
-            try{
+            try {
                 ComplianceProfile complianceProfile = getComplianceProfileEntityByUuid(uuid);
                 logger.debug("Trying to remove Compliance Profile: {}", complianceProfile);
                 if (!complianceProfile.getRaProfiles().isEmpty()) {
-                    for(RaProfile ref: complianceProfile.getRaProfiles()){
-                        if(ref.getComplianceProfiles() != null) {
+                    for (RaProfile ref : complianceProfile.getRaProfiles()) {
+                        if (ref.getComplianceProfiles() != null) {
                             ref.getComplianceProfiles().remove(complianceProfile);
                         }
                         raProfileService.updateRaProfileEntity(ref);
                     }
                 }
                 complianceProfileRepository.delete(complianceProfile);
-            }catch (ConnectorException e){
+            } catch (ConnectorException e) {
                 logger.warn("Unable to delete the Compliance Profile with uuid {}. It may have been already deleted", uuid);
             }
         }
@@ -287,38 +283,36 @@ public class ComplianceProfileServiceImpl implements ComplianceProfileService {
     public List<ComplianceRulesListResponseDto> getComplianceRules(String complianceProviderUuid, String kind, List<CertificateType> certificateType) throws NotFoundException {
         logger.info("Gathering Compliance Rules for Provider: {}, Kind: {}, CertificateType: {}", complianceProviderUuid, kind, certificateType);
         List<ComplianceRulesListResponseDto> complianceRules = new ArrayList<>();
-        if(certificateType == null){
+        if (certificateType == null) {
             certificateType = Arrays.asList(CertificateType.class.getEnumConstants());
         }
-        if(complianceProviderUuid != null && !complianceProviderUuid.isEmpty()) {
+        if (complianceProviderUuid != null && !complianceProviderUuid.isEmpty()) {
             logger.debug("Filter based on Compliance Provider: {}", complianceProviderUuid);
-            Connector connector = connectorService.getConnectorEntity(complianceProviderUuid);
+            Connector connector = getConnectorEntity(complianceProviderUuid);
             logger.debug("Compliance Provider: {}", connector);
             if (kind != null && !kind.isEmpty()) {
                 logger.debug("Fetching data for kind: {}", kind);
                 List<ComplianceRule> response = complianceRuleRepository.findByConnectorAndKindAndCertificateTypeIn(connector, kind, certificateType);
                 complianceRules.add(frameComplianceRulesResponseFromConnectorResponse(response, connector, kind));
-            }
-            else{
+            } else {
                 logger.debug("Fetching data for all kinds from the connector: {}", connector);
-                for(String connectorKind: connector.mapToDto().getFunctionGroups().stream().filter(r -> r.getFunctionGroupCode().equals(FunctionGroupCode.COMPLIANCE_PROVIDER)).findFirst().get().getKinds()){
+                for (String connectorKind : connector.mapToDto().getFunctionGroups().stream().filter(r -> r.getFunctionGroupCode().equals(FunctionGroupCode.COMPLIANCE_PROVIDER)).findFirst().get().getKinds()) {
                     logger.debug("Fetching data for Kind: {}", connectorKind);
                     List<ComplianceRule> response = complianceRuleRepository.findByConnectorAndKindAndCertificateTypeIn(connector, connectorKind, certificateType);
                     complianceRules.add(frameComplianceRulesResponseFromConnectorResponse(response, connector, connectorKind));
                 }
             }
-        }else{
+        } else {
             logger.debug("Finding rules from all available connectors in the inventory");
-            for(Connector connector: connectorService.listConnectorEntityByFunctionGroup(FunctionGroupCode.COMPLIANCE_PROVIDER)){
+            for (Connector connector : listComplianceProviders()) {
                 logger.debug("Fetching data from: {}", connector);
                 if (kind != null && !kind.isEmpty()) {
                     logger.debug("Fetching data for Kind: {}", kind);
                     List<ComplianceRule> response = complianceRuleRepository.findByConnectorAndKindAndCertificateTypeIn(connector, kind, certificateType);
                     complianceRules.add(frameComplianceRulesResponseFromConnectorResponse(response, connector, kind));
-                }
-                else{
+                } else {
                     logger.debug("Fetching data for all kinds available in the connector");
-                    for(String connectorKind: connector.mapToDto().getFunctionGroups().stream().filter(r -> r.getFunctionGroupCode().equals(FunctionGroupCode.COMPLIANCE_PROVIDER)).findFirst().get().getKinds()){
+                    for (String connectorKind : connector.mapToDto().getFunctionGroups().stream().filter(r -> r.getFunctionGroupCode().equals(FunctionGroupCode.COMPLIANCE_PROVIDER)).findFirst().get().getKinds()) {
                         logger.debug("Fetching data from Kind: {}", connectorKind);
                         List<ComplianceRule> response = complianceRuleRepository.findByConnectorAndKindAndCertificateTypeIn(connector, connectorKind, certificateType);
                         complianceRules.add(frameComplianceRulesResponseFromConnectorResponse(response, connector, connectorKind));
@@ -326,7 +320,7 @@ public class ComplianceProfileServiceImpl implements ComplianceProfileService {
                 }
             }
         }
-        logger.debug("Compliance Rules: ", complianceRules);
+        logger.debug("Compliance Rules: {}", complianceRules);
         return complianceRules;
     }
 
@@ -335,35 +329,33 @@ public class ComplianceProfileServiceImpl implements ComplianceProfileService {
     public List<ComplianceGroupsListResponseDto> getComplianceGroups(String complianceProviderUuid, String kind) throws NotFoundException {
         logger.info("Gathering Compliance Groups for Provider: {}, Kind: {}", complianceProviderUuid, kind);
         List<ComplianceGroupsListResponseDto> complianceGroups = new ArrayList<>();
-        if(complianceProviderUuid != null && !complianceProviderUuid.isEmpty()) {
+        if (complianceProviderUuid != null && !complianceProviderUuid.isEmpty()) {
             logger.debug("Filter based on Compliance Provider: {}", complianceProviderUuid);
-            Connector connector = connectorService.getConnectorEntity(complianceProviderUuid);
+            Connector connector = getConnectorEntity(complianceProviderUuid);
             logger.debug("Compliance Provider: {}", connector);
             if (kind != null && !kind.isEmpty()) {
                 logger.debug("Fetching data for kind: {}", kind);
                 List<ComplianceGroup> response = complianceGroupRepository.findByConnectorAndKind(connector, kind);
                 complianceGroups.add(frameComplianceGroupsResponseFromConnectorResponse(response, connector, kind));
-            }
-            else{
+            } else {
                 logger.debug("Fetching data for all kinds from the connector: {}", connector);
-                for(String connectorKind: connector.mapToDto().getFunctionGroups().stream().filter(r -> r.getFunctionGroupCode().equals(FunctionGroupCode.COMPLIANCE_PROVIDER)).findFirst().get().getKinds()){
+                for (String connectorKind : connector.mapToDto().getFunctionGroups().stream().filter(r -> r.getFunctionGroupCode().equals(FunctionGroupCode.COMPLIANCE_PROVIDER)).findFirst().get().getKinds()) {
                     logger.debug("Fetching data for Kind: {}", connectorKind);
                     List<ComplianceGroup> response = complianceGroupRepository.findByConnectorAndKind(connector, connectorKind);
                     complianceGroups.add(frameComplianceGroupsResponseFromConnectorResponse(response, connector, connectorKind));
                 }
             }
-        }else{
+        } else {
             logger.debug("Finding rules from all available connectors in the inventory");
-            for(Connector connector: connectorService.listConnectorEntityByFunctionGroup(FunctionGroupCode.COMPLIANCE_PROVIDER)){
+            for (Connector connector : listComplianceProviders()) {
                 logger.debug("Fetching data from: {}", connector);
                 if (kind != null && !kind.isEmpty()) {
                     logger.debug("Fetching data for Kind: {}", kind);
                     List<ComplianceGroup> response = complianceGroupRepository.findByConnectorAndKind(connector, kind);
                     complianceGroups.add(frameComplianceGroupsResponseFromConnectorResponse(response, connector, kind));
-                }
-                else{
+                } else {
                     logger.debug("Fetching data for all kinds available in the connector");
-                    for(String connectorKind: connector.mapToDto().getFunctionGroups().stream().filter(r -> r.getFunctionGroupCode().equals(FunctionGroupCode.COMPLIANCE_PROVIDER)).findFirst().get().getKinds()){
+                    for (String connectorKind : connector.mapToDto().getFunctionGroups().stream().filter(r -> r.getFunctionGroupCode().equals(FunctionGroupCode.COMPLIANCE_PROVIDER)).findFirst().get().getKinds()) {
                         logger.debug("Fetching data from Kind: {}", connectorKind);
                         List<ComplianceGroup> response = complianceGroupRepository.findByConnectorAndKind(connector, connectorKind);
                         complianceGroups.add(frameComplianceGroupsResponseFromConnectorResponse(response, connector, connectorKind));
@@ -377,18 +369,18 @@ public class ComplianceProfileServiceImpl implements ComplianceProfileService {
     @Override
     @AuditLogged(originator = ObjectType.FE, affected = ObjectType.COMPLIANCE_PROFILE, operation = OperationType.CHANGE)
     public void associateProfile(String uuid, RaProfileAssociationRequestDto raprofile) throws NotFoundException {
-        logger.info("Associate RA Profiles: {} to Compliance Profile: ", raprofile, uuid);
-        for(String raProfileUuid: raprofile.getRaProfileUuids()) {
+        logger.info("Associate RA Profiles: {} to Compliance Profile: {}", raprofile, uuid);
+        for (String raProfileUuid : raprofile.getRaProfileUuids()) {
             RaProfile raProfile = raProfileService.getRaProfileEntity(raProfileUuid);
             ComplianceProfile complianceProfile = getComplianceProfileEntityByUuid(uuid);
-            if(raProfile.getComplianceProfiles() != null) {
-                if(raProfile.getComplianceProfiles().contains(complianceProfile)) {
+            if (raProfile.getComplianceProfiles() != null) {
+                if (raProfile.getComplianceProfiles().contains(complianceProfile)) {
                     continue;
-                }else {
+                } else {
                     raProfile.getComplianceProfiles().add(complianceProfile);
                 }
-            }else{
-                raProfile.setComplianceProfiles(new HashSet<>(Arrays.asList(complianceProfile)));
+            } else {
+                raProfile.setComplianceProfiles(new HashSet<>(List.of(complianceProfile)));
             }
             try {
                 complianceService.complianceCheckForRaProfile(raProfileUuid);
@@ -402,25 +394,25 @@ public class ComplianceProfileServiceImpl implements ComplianceProfileService {
     @Override
     @AuditLogged(originator = ObjectType.FE, affected = ObjectType.COMPLIANCE_PROFILE, operation = OperationType.CHANGE)
     public void disassociateProfile(String uuid, RaProfileAssociationRequestDto raprofile) throws NotFoundException {
-        logger.info("Associate RA Profiles: {} to Compliance Profile: ", raprofile, uuid);
-        for(String raProfileUuid: raprofile.getRaProfileUuids()) {
+        logger.info("Associate RA Profiles: {} to Compliance Profile: {}", raprofile, uuid);
+        for (String raProfileUuid : raprofile.getRaProfileUuids()) {
             RaProfile raProfile = raProfileService.getRaProfileEntity(raProfileUuid);
             ComplianceProfile complianceProfile = getComplianceProfileEntityByUuid(uuid);
-            if(raProfile.getComplianceProfiles() != null) {
-                if(!raProfile.getComplianceProfiles().contains(complianceProfile)) {
+            if (raProfile.getComplianceProfiles() != null) {
+                if (!raProfile.getComplianceProfiles().contains(complianceProfile)) {
                     continue;
-                }else {
+                } else {
                     raProfile.getComplianceProfiles().remove(complianceProfile);
                 }
             }
-            if(raProfile.getComplianceProfiles() != null || raProfile.getComplianceProfiles().isEmpty()){
+            if (raProfile.getComplianceProfiles() != null || raProfile.getComplianceProfiles().isEmpty()) {
                 List<Certificate> certificates = certificateService.listCertificatesForRaProfile(raProfile);
-                for(Certificate certificate: certificates){
+                for (Certificate certificate : certificates) {
                     certificate.setComplianceResult(null);
                     certificate.setComplianceStatus(null);
                     certificateService.updateCertificateEntity(certificate);
                 }
-            }else {
+            } else {
                 try {
                     complianceService.complianceCheckForRaProfile(raProfileUuid);
                 } catch (ConnectorException e) {
@@ -435,14 +427,14 @@ public class ComplianceProfileServiceImpl implements ComplianceProfileService {
     public Set<String> isComplianceProviderAssociated(Connector connector) {
         Set<String> errors = new HashSet<>();
         //Check if the connector is being used in any of the compliance profile groups
-        for(ComplianceProfile complianceProfile: complianceProfileRepository.findAll()){
-            if(complianceProfile.getGroups().stream().map(ComplianceGroup::getConnector).collect(Collectors.toList()).contains(connector)){
+        for (ComplianceProfile complianceProfile : complianceProfileRepository.findAll()) {
+            if (complianceProfile.getGroups().stream().map(ComplianceGroup::getConnector).collect(Collectors.toList()).contains(connector)) {
                 errors.add(complianceProfile.getName());
             }
         }
         //Check if the connector is being used in any of the compliance group association
-        for(ComplianceProfileRule complianceProfileRule: complianceProfileRuleRepository.findAll()){
-            if(complianceProfileRule.getComplianceRule().getConnector().getUuid().equals(connector.getUuid())){
+        for (ComplianceProfileRule complianceProfileRule : complianceProfileRuleRepository.findAll()) {
+            if (complianceProfileRule.getComplianceRule().getConnector().getUuid().equals(connector.getUuid())) {
                 errors.add(complianceProfileRule.getComplianceProfile().getName());
             }
         }
@@ -452,14 +444,14 @@ public class ComplianceProfileServiceImpl implements ComplianceProfileService {
     @Override
     public void nullifyComplianceProviderAssociation(Connector connector) {
         //Delete all the group association for a connector
-        for(ComplianceProfile complianceProfile: complianceProfileRepository.findAll()){
-            if(complianceProfile.getGroups().stream().map(ComplianceGroup::getConnector).collect(Collectors.toList()).contains(connector)){
+        for (ComplianceProfile complianceProfile : complianceProfileRepository.findAll()) {
+            if (complianceProfile.getGroups().stream().map(ComplianceGroup::getConnector).collect(Collectors.toList()).contains(connector)) {
                 complianceProfile.getGroups().removeAll(complianceProfile.getGroups().stream().filter(r -> r.getConnector().getUuid().equals(connector.getUuid())).collect(Collectors.toSet()));
             }
         }
         //delete all the rule association for the connector
-        for(ComplianceProfileRule complianceProfileRule: complianceProfileRuleRepository.findAll()){
-            if(complianceProfileRule.getComplianceRule().getConnector().getUuid().equals(connector.getUuid())){
+        for (ComplianceProfileRule complianceProfileRule : complianceProfileRuleRepository.findAll()) {
+            if (complianceProfileRule.getComplianceRule().getConnector().getUuid().equals(connector.getUuid())) {
                 complianceProfileRuleRepository.delete(complianceProfileRule);
             }
         }
@@ -476,10 +468,10 @@ public class ComplianceProfileServiceImpl implements ComplianceProfileService {
 
     @Override
     public void checkCompliance(ComplianceProfileComplianceCheckDto request) {
-        for(String uuid: request.getComplianceProfileUuids()){
+        for (String uuid : request.getComplianceProfileUuids()) {
             try {
                 complianceService.complianceCheckForComplianceProfile(uuid);
-            } catch (Exception e){
+            } catch (Exception e) {
                 logger.error("Compliance check failed.", e);
             }
         }
@@ -495,22 +487,22 @@ public class ComplianceProfileServiceImpl implements ComplianceProfileService {
     }
 
     private void addRulesForConnector(List<ComplianceProfileRulesRequestDto> rules, ComplianceProfile profile) throws NotFoundException, ValidationException {
-        for (ComplianceProfileRulesRequestDto request: rules){
-            Connector connector = connectorService.getConnectorEntity(request.getConnectorUuid());
+        for (ComplianceProfileRulesRequestDto request : rules) {
+            Connector connector = getConnectorEntity(request.getConnectorUuid());
             List<ComplianceRule> complianceRulesFromConnector = complianceRuleRepository.findByConnectorAndKind(connector, request.getKind());
             Map<String, ComplianceRule> ruleMap = new HashMap<>();
-            if(request.getRules() != null && !request.getRules().isEmpty()) {
+            if (request.getRules() != null && !request.getRules().isEmpty()) {
                 complianceRulesFromConnector.forEach(r -> ruleMap.put(r.getUuid(), r));
-                for(ComplianceRequestRulesDto complianceRequestRulesDto: request.getRules()){
-                    if(ruleMap.get(complianceRequestRulesDto.getUuid()) != null){
+                for (ComplianceRequestRulesDto complianceRequestRulesDto : request.getRules()) {
+                    if (ruleMap.get(complianceRequestRulesDto.getUuid()) != null) {
                         ComplianceProfileRule complianceProfileRule = generateComplianceProfileRule(profile, ruleMap.get(complianceRequestRulesDto.getUuid()), complianceRequestRulesDto.getAttributes());
                         complianceProfileRuleRepository.save(complianceProfileRule);
-                    }else{
+                    } else {
                         logger.warn("Rule with UUID {} not found from Compliance Provider", complianceRequestRulesDto.getUuid());
                     }
                 }
             }
-            if(request.getGroups() != null && !request.getGroups().isEmpty()) {
+            if (request.getGroups() != null && !request.getGroups().isEmpty()) {
                 for (String group : request.getGroups()) {
                     ComplianceGroup complianceGroup = complianceGroupRepository.findByUuidAndConnectorAndKind(group, connector, request.getKind()).orElseThrow(() -> new NotFoundException(ComplianceGroup.class, group));
                     profile.getGroups().add(complianceGroup);
@@ -520,12 +512,12 @@ public class ComplianceProfileServiceImpl implements ComplianceProfileService {
         complianceProfileRepository.save(profile);
     }
 
-    private ComplianceProfileRule generateComplianceProfileRule(ComplianceProfile complianceProfile, ComplianceRule complianceRule, List<RequestAttributeDto> attributes) throws ValidationException{
+    private ComplianceProfileRule generateComplianceProfileRule(ComplianceProfile complianceProfile, ComplianceRule complianceRule, List<RequestAttributeDto> attributes) throws ValidationException {
         logger.debug("Generating rule for: {}, Attributes: {}", complianceRule, attributes);
-        if(complianceRule.getAttributes() != null) {
-            if(attributes != null) {
+        if (complianceRule.getAttributes() != null) {
+            if (attributes != null) {
                 AttributeDefinitionUtils.validateAttributes(complianceRule.getAttributes(), attributes);
-            }else{
+            } else {
                 throw new ValidationException("Attributes are not provided for rule with name " + complianceRule.getName());
             }
         }
@@ -538,15 +530,15 @@ public class ComplianceProfileServiceImpl implements ComplianceProfileService {
     }
 
 
-    private Boolean checkComplianceProfileEntityByName(String name){
-        return !complianceProfileRepository.findByName(name).isEmpty();
+    private Boolean checkComplianceProfileEntityByName(String name) {
+        return complianceProfileRepository.findByName(name).isPresent();
     }
 
     private ComplianceProfile getComplianceProfileEntityByUuid(String uuid) throws NotFoundException {
         return complianceProfileRepository.findByUuid(uuid).orElseThrow(() -> new NotFoundException(ComplianceProfile.class, uuid));
     }
 
-    private ComplianceRulesListResponseDto frameComplianceRulesResponseFromConnectorResponse(List<ComplianceRule> response, Connector connector, String kind){
+    private ComplianceRulesListResponseDto frameComplianceRulesResponseFromConnectorResponse(List<ComplianceRule> response, Connector connector, String kind) {
         logger.error("Connector Response: {}", response);
         ComplianceRulesListResponseDto dto = new ComplianceRulesListResponseDto();
         dto.setConnectorName(connector.getName());
@@ -556,7 +548,7 @@ public class ComplianceProfileServiceImpl implements ComplianceProfileService {
         return dto;
     }
 
-    private ComplianceGroupsListResponseDto frameComplianceGroupsResponseFromConnectorResponse(List<ComplianceGroup> response, Connector connector, String kind){
+    private ComplianceGroupsListResponseDto frameComplianceGroupsResponseFromConnectorResponse(List<ComplianceGroup> response, Connector connector, String kind) {
         logger.error("Connector Response: {}", response);
         ComplianceGroupsListResponseDto dto = new ComplianceGroupsListResponseDto();
         dto.setConnectorName(connector.getName());
@@ -566,7 +558,7 @@ public class ComplianceProfileServiceImpl implements ComplianceProfileService {
         return dto;
     }
 
-    private ComplianceRule getComplianceRuleEntity(String ruleUuid, Connector connector, String kind) throws NotFoundException{
+    private ComplianceRule getComplianceRuleEntity(String ruleUuid, Connector connector, String kind) throws NotFoundException {
         return complianceRuleRepository.findByUuidAndConnectorAndKind(
                         ruleUuid,
                         connector,
@@ -582,7 +574,7 @@ public class ComplianceProfileServiceImpl implements ComplianceProfileService {
         return complianceProfileRuleRepository.findByComplianceProfileAndComplianceRule(complianceProfile, complianceRule).isPresent();
     }
 
-    private ComplianceGroup getComplianceGroupEntity(String groupUuid, Connector connector, String kind) throws NotFoundException{
+    private ComplianceGroup getComplianceGroupEntity(String groupUuid, Connector connector, String kind) throws NotFoundException {
         return complianceGroupRepository.findByUuidAndConnectorAndKind(
                         groupUuid,
                         connector,
@@ -591,5 +583,25 @@ public class ComplianceProfileServiceImpl implements ComplianceProfileService {
                         () -> new NotFoundException(ComplianceGroup.class, groupUuid
                         )
                 );
+    }
+
+    private Connector getConnectorEntity(String uuid) throws NotFoundException {
+        return connectorRepository.findByUuid(uuid)
+                .orElseThrow(() -> new NotFoundException(Connector.class, uuid));
+    }
+
+    private List<Connector> listComplianceProviders() {
+        List<Connector> connectors = new ArrayList<>();
+
+        for (Connector connector : connectorRepository.findByStatus(ConnectorStatus.CONNECTED)) {
+            ConnectorDto connectorDto = connector.mapToDto();
+            for (FunctionGroupDto fg : connectorDto.getFunctionGroups()) {
+                if (fg.getFunctionGroupCode() == FunctionGroupCode.COMPLIANCE_PROVIDER) {
+                    connectorDto.setFunctionGroups(List.of(fg));
+                    connectors.add(connector);
+                }
+            }
+        }
+        return connectors;
     }
 }
